2005-09-23 Joshua Tauberer <tauberer@for.net>

	* src/mod_mono.c:
	
	  The default alias for xsp's within vhosts is the name of the
	  vhost server, so that vhosts with default aliases don't all
	  use the same Unix socket file name.  A new is_default field
	  tracks whether an XSP is the server default, rather than using
	  the "default" alias.
	  
	  Aliases are never NULL except when passed to search_for_alias,
	  start_xsp, and terminate_xsp2.
	  
	  The control panel is amended so that individual XSPs
	  can be restarted.

2005-09-19 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: if we read 0 bytes, stop the loop in apr_socket_recv
	used in apache 1.3. Patch by Mathias Herberts.

2005-09-01 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.[ch]: one single read for all the headers.
	Update xsp too.

2005-08-28 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.[ch]: new SEND_FILE command that uses apache's ap_send_fd
	when sending a file. No more sucking when mod_mono serves static files.

2005-07-26 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.h: updated to new default path for mod-mono-server.exe.
	WARNING: this might break if you don't install an up-to-date xsp!!!

2005-07-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* INSTALL:
	* man/mod_mono.8.in: the path for the xsp tests has changed.

2005-07-18 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* mod_mono.conf.in: use <IfModule>

2005-06-02 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/Makefile.am: no need to set PREFIX for apxs.

2005-05-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.[ch]: support for IS_CONNECTED and increased version
	number.

2005-05-03  Ben Maurer  <bmaurer@ximian.com>

	* configure.in: 1.0.9

2005-04-24 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: when checking for http_protocol.h, include httpd.h too.
	Patch from Bill Middleton.
